<resources>
    <string name="app_name">Self Evaluation</string>
    <string name="self_gratitude_journal">Self.Gratitude.Journal</string>
    <string name="greatfulthought">What are  graetful for today?</string>
    <string name="start_text">get started</string>
    <string name="hint_">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">log in</string>
    <string name="or">OR</string>
    <string name="create_account">create account</string>
    <string name="user_name">User name</string>
    <string name="todo" />
    <string name="vikash">vikash</string>
    <string name="today">Today</string>

    <string name="write_journal">Write Journal</string>
    <string name="save">SAVE</string>
    <string name="no_thought_hint">Write a journal by clicking + icon</string>
    <string name="add">add</string>
    <string name="sign_out">sign out</string>
    <string name="Vikas_rai">Vikash rai</string>
    <string name="share_the_journal">share the journal</string>
    <string name="add_image_to_your_journal">add image to your journal</string>

    <string name="title">Title</string>
    <string name="thought">Thought</string>
    <string name="date_created">Date created</string>
</resources>