<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:gravity="center"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    android:background="@drawable/gradiant_bg">




    <LinearLayout
        android:id="@+id/LinearLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ProgressBar
            android:id="@+id/loginProgressBar"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            />



        <AutoCompleteTextView
            android:id="@+id/logInEmail"
            android:hint="@string/hint_"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/logInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"/>
        <Button
            android:id="@+id/logInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textColor="@android:color/holo_red_dark"
            android:background="@android:color/transparent"
            android:layout_marginTop="16dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@android:color/holo_red_dark"
            android:background="@android:color/transparent"

            android:textStyle="bold"/>


    </LinearLayout>



</LinearLayout>
