<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="18dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradiant_bg">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/self_gratitude_journal"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardElevation="6dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <TextView
                android:id="@+id/greatfulthought"
                android:layout_gravity="center"
                android:text="@string/greatfulthought"
                android:textSize="19sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />


        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <Button
        android:id="@+id/startButton"
        android:text="@string/start_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:background="@android:color/transparent"/>

</LinearLayout>